temp/objects/Invitee__c.object
<CustomObject>
    <description>People outside organization and different from supplier contact.</description>
    <fields>
        <fullName>EMail__c</fullName>
        <label>E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <label>Expertise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyWords__c</fullName>
        <label>Key Words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>Mobile Phone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dr</fullName>
                </value>
                <value>
                    <fullName>Sir</fullName>
                </value>
                <value>
                    <fullName>Ma&apos;am</fullName>
                </value>
                <value>
                    <fullName>Phd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Invitee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Expertise__c</columns>
        <columns>KeyWords__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invitees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>